adding book and publisher rout to swagger.js
